numerous bug fixes related to new EduPeriod system